# rgb20-token-test

./: .gitignore  README.md
rgb20-token/: Cargo.toml
rgb20-token/src/: main.rs
src/: main.rs
